correciton erreur index

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -17,7 +17,7 @@ server {
     # configuration hardened
     include /etc/nginx/snippets/ssl-params.conf;
 
-    index.html index.nginx-debian.html;
+    index index.html index.nginx-debian.html;
     server_name lifap5.univ-lyon1.fr;
 
     # root /var/www/html;
