Correction config ssl/nginx

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -15,7 +15,7 @@ server {
     # ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
     # configuration hardened
-    include /etc/nginx/snippets/ssl-params.conf;
+    # include /etc/nginx/snippets/ssl-params.conf;
 
     index index.html index.nginx-debian.html;
     server_name lifap5.univ-lyon1.fr;
