--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -18,6 +18,9 @@ http {
 	include /etc/nginx/mime.types;
 	default_type application/octet-stream;
 
+  # configuration hardened
+  include /etc/nginx/snippets/ssl-params.conf;
+
 	##
 	# SSL Settings
 	##
