--- a/package.json
+++ b/package.json
@@ -34,11 +34,15 @@
   "homepage": "https://github.com/romulusFR/lifap5-backend-2019-2020#readme",
   "dependencies": {
     "cors": "^2.8.5",
-    "debug": "^4.1.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-winston": "^4.0.3",
+    "helmet": "^3.21.3",
     "http-errors": "^1.7.3",
     "pg": "^7.18.2",
+    "serve-favicon": "^2.5.0",
+    "triple-beam": "^1.3.0",
+    "winston": "^3.2.1",
     "ws": "^7.2.2"
   },
   "devDependencies": {
