--- a/package.json
+++ b/package.json
@@ -36,9 +36,9 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-winston": "^4.0.3",
     "helmet": "^3.21.3",
     "http-errors": "^1.7.3",
+    "morgan": "^1.9.1",
     "pg": "^7.18.2",
     "serve-favicon": "^2.5.0",
     "triple-beam": "^1.3.0",
