--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,14 +1,34 @@
 {
-    "env": {
-        "commonjs": true,
-        "es2020": true,
-        "node": true
-    },
-    "extends": "eslint:recommended",
-    "globals": {
-        "Atomics": "readonly",
-        "SharedArrayBuffer": "readonly"
-    },
-    "rules": {
-    }
+  "env": {
+    "commonjs": true,
+    "es2020": true,
+    "node": true
+  },
+  "extends": [
+    "eslint:recommended", 
+    "airbnb-base",
+    "plugin:import/errors",
+    "plugin:import/warnings"
+  ],
+  "globals": {
+    "Atomics": "readonly",
+    "SharedArrayBuffer": "readonly"
+  },
+  "rules": {
+    "no-var": [
+      "error"
+    ],
+    "no-unused-vars": [
+      "error",
+      { "argsIgnorePattern": "^_" }
+    ],
+    "object-curly-newline": [
+      "error",
+      { "ObjectExpression": { "multiline": true},
+        "ObjectPattern": { "multiline": true},
+        "ImportDeclaration": "never",
+        "ExportDeclaration": "never"
+      } 
+    ]
+  }
 }
