--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
   "bugs": {
     "url": "https://github.com/romulusFR/lifap5-backend-2019-2020/issues"
   },
+  "engines" : { 
+    "node" : ">=12.0.0" 
+  },
   "homepage": "https://github.com/romulusFR/lifap5-backend-2019-2020#readme",
   "dependencies": {
     "cors": "^2.8.5",
@@ -48,8 +51,10 @@
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-filenames": "^1.3.2",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-security": "^1.4.0",
     "nodemon": "^2.0.2"
   }
