--- a/package.json
+++ b/package.json
@@ -31,11 +31,12 @@
   "bugs": {
     "url": "https://github.com/romulusFR/lifap5-backend-2019-2020/issues"
   },
-  "engines" : { 
-    "node" : ">=12.0.0" 
+  "engines": {
+    "node": ">=12.0.0"
   },
   "homepage": "https://github.com/romulusFR/lifap5-backend-2019-2020#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
