--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "homepage": "https://github.com/romulusFR/lifap5-backend-2019-2020#readme",
   "dependencies": {
+    "@godaddy/terminus": "^4.3.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
