--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@godaddy/terminus": "^4.3.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "ejs": "^3.0.1",
     "express": "^4.17.1",
     "helmet": "^3.21.3",
     "http-errors": "^1.7.3",
