--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "pg": "^7.18.2",
     "pm2": "^4.2.3",
     "serve-favicon": "^2.5.0",
+    "validator": "^12.2.0",
     "winston": "^3.2.1",
     "ws": "^7.2.3"
   },
