--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lifap5-backend-2019-2020",
   "version": "0.1.1",
-  "description": "Backend pour le projet LIFAP5 2020-2020 (qcm)",
+  "description": "Backend pour le projet LIFAP5 2019-2020 (gestion de qcm)",
   "main": "app.js",
   "scripts": {
     "start": "DEBUG=lifap5:* npx nodemon server.js",
