--- a/.gitignore
+++ b/.gitignore
@@ -51,5 +51,8 @@ node_modules/
 
 # dotenv environment variables file
 .env
-.env.test
 server
+
+#newman reports
+newman/newman-run-report-*.json
+
