--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "DEBUG=lifap5:* npx nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "newman --environment ./newman/lifap5-backend-env-2019-2020-DEV.postman_environment.json run ./newman/lifap5-backend-2019-2020.postman_collection.json --reporters cli"
   },
   "repository": {
     "type": "git",
