--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "DEBUG=lifap5:* npx nodemon server.js",
-    "test": "newman --environment ./newman/lifap5-backend-env-2019-2020-DEV.postman_environment.json run ./newman/lifap5-backend-2019-2020.postman_collection.json --reporters cli"
+    "test": "npx newman --environment ./newman/lifap5-backend-env-2019-2020-DEV.postman_environment.json run ./newman/lifap5-backend-2019-2020.postman_collection.json --reporters cli"
   },
   "repository": {
     "type": "git",
@@ -58,6 +58,7 @@
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-security": "^1.4.0",
+    "newman": "^4.6.0",
     "nodemon": "^2.0.2"
   }
 }
