--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "pg": "^7.18.2",
     "pm2": "^4.2.3",
     "serve-favicon": "^2.5.0",
+    "swagger-jsdoc": "^3.5.0",
+    "swagger-ui-express": "^4.1.3",
     "validator": "^12.2.0",
     "winston": "^3.2.1",
     "ws": "^7.2.3"
@@ -58,7 +60,8 @@
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-security": "^1.4.0",
-    "newman": "^4.6.0",
-    "nodemon": "^2.0.2"
+    "jest": "^25.1.0",
+    "nodemon": "^2.0.2",
+    "supertest": "^4.0.2"
   }
 }
