--- a/package.json
+++ b/package.json
@@ -45,11 +45,11 @@
     "pg": "^7.18.2",
     "pm2": "^4.2.3",
     "serve-favicon": "^2.5.0",
-    "swagger-jsdoc": "^3.5.0",
     "swagger-ui-express": "^4.1.3",
     "validator": "^12.2.0",
     "winston": "^3.2.1",
-    "ws": "^7.2.3"
+    "ws": "^7.2.3",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
