--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 # Deployment material
+server
 server/
+.env
+
+# JSDoc (generated)
+jsdoc/
 
 # Generic
 *~
@@ -48,11 +53,3 @@ node_modules/
 
 # Output of 'npm pack'
 *.tgz
-
-# dotenv environment variables file
-.env
-server
-
-#newman reports
-#newman/newman-run-report-*.json
-
