--- a/static/open-api-specification.yaml
+++ b/static/open-api-specification.yaml
@@ -12,15 +12,16 @@ info:
     url: 'https://creativecommons.org/licenses/by-nc-sa/3.0/fr/'
 
 servers:
-  - url: 'https://lifap5.univ-lyon1.fr/'
-    description: The public production server
   - url: 'http://localhost:3000/'
     description: A local development server
-
+  - url: 'https://lifap5.univ-lyon1.fr/'
+    description: The public production server
 
 tags:
   - name: users
     description: User related features
+  - name: quizzes
+    description: Quizzes related features
   - name: public
     description: Everyone one, without authentication
   - name: authenticated
@@ -110,7 +111,7 @@ paths:
   /users/:
     get:
       summary: All users
-      description: The list of all users, with pagination
+      description: The list of all users (TODO with pagination)
       operationId: getAllUsersHandler
       tags:
         - public
@@ -177,6 +178,27 @@ paths:
               schema:
                 type: string
               example: <html>An error page</html>
+
+  /quizzes/:
+    get:
+      summary: All quizzes
+      description: The list of all quizzes (TODO with pagination)
+      operationId: getAllQuizzesHandler
+      tags:
+        - public
+        - quizzes
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema: 
+                type: array
+                items:
+                  type: object
+                  $ref: '#/components/schemas/ObjectQuizz'
+#              example: [test.user, other.user]
+
 
 components:
 
@@ -276,6 +298,48 @@ components:
         lastname:
           type: string
           example: user
+
+    ObjectQuizz:
+      type: object
+      required:
+        - quiz_id
+        - created_at
+        - title
+        - description
+        - owner_id
+        - questions_number
+        - questions_ids
+      properties:
+        quiz_id:
+          type: integer
+          example: 1
+        created_at:
+          type: string
+          format: date-time
+          example: "2020-03-11T09:56:12.372Z"
+        title:
+          type: string
+          example: QCM LIFAP5 \#1
+        description:
+          type: string
+          example: Des questions de JS et lambda calcul
+        owner_id:
+          type: string
+          example: test.user
+        questions_number:
+          type: integer
+          example: 2
+        questions_ids:
+          type: array
+          items:
+            type: integer
+          example: [0,1]
+        open:
+          type: boolean
+          example: false
+        total_weight:
+          type: integer
+          example: 4
 
     Error:
       type: object
