--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Backend pour le projet LIFAP5 2019-2020 (gestion de qcm)",
   "main": "app.js",
   "scripts": {
-    "start": "DEBUG=lifap5:* npx nodemon server.js",
+    "start": "DEBUG=lifap5:* npx nodemon ./src/server.js",
     "test": "echo not yet",
     "doc": "jsdoc -c .jsdoc.json"
   },
