refactor: réécriture en composant (OK, smoke test)

--- a/static/open-api-specification.yaml
+++ b/static/open-api-specification.yaml
@@ -61,7 +61,9 @@ paths:
             schema:
               description: The content to echo
               type: object
-            example: {msg: 'test', val:42 }
+            example:
+              msg: 'test'
+              val: 42
       responses:
         200:
           description: Echoed input
@@ -70,7 +72,9 @@ paths:
               schema:
                 description: The echoed content
                 type: object
-              example: {msg: 'test', val:42 }
+              example:
+                msg: 'test'
+                val: 42
         # default:
         #   $ref: "#/components/responses/error"
 
@@ -92,6 +96,7 @@ paths:
               schema:
                 type: string
               example: <html>An error page</html>
+              
 
   /healthcheck:
     get:
